# code2lora-mlx

./: .gitignore  FINDINGS.md  LICENSE  README.md  ablate_avg_adapter.py  ablate_harder.py  analyze_official.py  build_slim.py  cli.py  compare_adapters.py  cosine_crtest.py  cosine_scale.py  demo_github_repo.py  demo_rust_repo.py  eval_evo.py  eval_heldout.py  eval_heldout_all.py  eval_official.py  gen_compare.py  lambda_followups.py  lambda_residual.py  lambda_residual_hardness.py  main.py  pyproject.toml  repo_match_test.py  run_demo.py  show_completions.py  slim_complete.py  slim_verify.py  time_train_step.py  train.py  train_overparam_adapter.py  train_shared_lora.py  train_shared_lora_proper.py  validate_encoder.py
c2l/: __init__.py  commit_gru.py  config.py  dataset.py  hypernetwork.py  official_direct.py  qwen3_repo_encoder.py  qwen_lora.py  repo_encoder.py  trainer.py
scripts/: prepare_diy_repos.py  prepare_repopeftbench.py
tests/: test_encoder_faithful.py  test_p0_e2e.py  test_p1_train_smoke.py  test_shapes.py
