[project]
name = "code2lora-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.20.1",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "numpy>=2.4.6",
    "pyarrow>=24.0.0",
    "safetensors>=0.8.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
